# Ceradon-Node-Architect

./: CHANGELOG.md  CNAME  README.md  index.html  pyproject.toml  requirements.txt
data/: default_components.json
docs/: atak_exports.md  mission_project_schema.md
sample_builds/: cellular_backhaul_node.json  fpv_relay_payload.json  ground_relay_node.json  lab_dev_node.json  pose_ready.json  recon_airborne_node.json  rural_lora_sensor.json  urban_wifi_recon.json  whitefrost_demo.json  whitefrost_demo.mission.json
src/ceradon/: __init__.py  cli.py  data_loader.py  estimator.py  mission_project.py  models.py
tests/: test_estimator.py
web/: app.js  components.json  index.html  styles.css  whitefrost_demo.mission.json
